src/config/auth/snapshots/roadster__config__auth__tests__auth@case_04.snap
---
source: src/config/auth/mod.rs
expression: auth
---
[jwt]
secret = 'foo'
[jwt.claims]
audience = ['bar']
required-claims = ['baz']
