src/config/auth/snapshots/roadster__config__auth__tests__auth@case_2.snap
---
source: src/config/auth/mod.rs
expression: auth
---
[jwt]
cookie-name = 'authorization'
secret = 'foo'

[jwt.claims]
audience = ['bar']
required-claims = []
